railcard.css
#railcard {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}
#railcard #railcard_headbar {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    margin-top: 2%;
    margin-bottom: 100px;
    width: 100%;
    height: 180px;
    flex-wrap: wrap;
}
#railcard #railcard_headbar .imgdiv {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 150px;
    height: 150px;
}
#railcard #railcard_headbar .imgdiv:hover {
    cursor: pointer;
}
#railcard #railcard_headbar img {
    width: 120px;
    transition: all 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275);
    box-shadow: 0px 0px whitesmoke;
    border: 0px solid white;
    border-radius: 0px 10px 0px 0px;
}
#railcard #railcard_headbar .rarity5 {
    background-image: linear-gradient(rgb(144,89,82), rgb(196,160,109));
}
#railcard #railcard_headbar .rarity4 {
    background-image: linear-gradient(rgb(64,66,101),rgb(149,99,204));
}
#railcard #railcard_headbar .rarity5,
#railcard #railcard_headbar .rarity4 {
    width: 100%;
    box-shadow: 2px 2px 5px 1px;
    border-width: 2px 2px 0px 2px;
    border-style: double;
    border-color: rgba(255, 255, 255, 0.5);
}

#railcard_detail_img:hover {
  transition: transform 0.3s ease-in-out;
  -webkit-transform: scale(0.2);
  -ms-transform: scale(0.2);
  transform: scale(1.1);
}

#railcard #railcard_detail {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
}
#railcard #railcard_detail_img {
    transition: transform 0.3s ease-in-out;
    max-width: 100%;
    border-radius: 30px;
    box-shadow: 0px 10px 20px 5px black; 
}

